Review fix: harden analyzed-expr substrate tests and FuncCall rebuild
Apply step-level dimensional-review findings on the analyzed-expression IR
substrate.

Production (AnalyzedExpr.java):
- Collapse the FuncCall changed-argument path to a single list allocation:
  the accumulator now backs the rebuilt node directly via
  Collections.unmodifiableList, dropping the redundant List.copyOf second
  copy while keeping the rebuilt list read-only. The all-unchanged path
  still returns the input node and its original list by reference.
- Import ArrayList instead of the fully-qualified inline reference, matching
  the file's import style.
- Note the newArgs sentinel's double role (null until first change; the
  null-at-end signal for the unchanged path).

Tests (AnalyzedExprTest.java):
- Add an empty-argument FuncCall case so the zero-iteration loop boundary
  is exercised distinctly (niladic SQL calls lower to a zero-arg FuncCall).
- Add a single-argument-changed FuncCall case for the minimal singleton
  rebuild.
- Reorder the two-arguments-changed case ahead of the negative case so the
  (a)-(h) labels read in sequence with the negative case last.
- Add a section header for the dispatch-driven nested-tree tests.
- Replace the bare instanceof assertion with a concrete-class assertion so
  a failure names the actual rebuilt type.
- Assert the full deterministic exception message instead of a substring,
  pinning both the prefix and the fully-qualified class name.
- Document the copy-constructor test's suffix-free precondition for a later
  slice that adds a dbName-carrying constructor.